# higuma-dashboard

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/higuma_dashboard/: __init__.py  dashboard.py  streamlit.py
src/higuma_dashboard/pages/: information.py
