[project]
name = "higuma-dashboard"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Atori Ikeyama", email = "49859718+Atori-Ikeyama@users.noreply.github.com" }
]
dependencies = [
    "streamlit>=1.36.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
